--- a/naks-wellness-hub-main/backend/tsconfig.json
+++ b/naks-wellness-hub-main/backend/tsconfig.json
@@ -4,14 +4,15 @@
       "module": "ESNext",                // Use ESM (ECMAScript Modules)
       "moduleResolution": "node",        // Resolve modules like Node.js does
       "esModuleInterop": true,           // Allow default imports from CommonJS modules
-      "outDir": "./dist",                // Specify output directory for compiled code
+      "outDir": "./dist",
+      "rootDir": "./src",                  // Specify output directory for compiled code
       "strict": true,                    // Enable strict type checking
       "skipLibCheck": true,              // Skip library checks to speed up compilation
       "forceConsistentCasingInFileNames": true
     },
     "include": [
       "src/**/*.ts"                      // Only compile TypeScript files in the src folder
-    ],
+, "src/server.ts"    ],
     "exclude": [
       "node_modules"                     // Exclude node_modules
     ]
