--- a/naks-wellness-hub-main/backend/.env
+++ b/naks-wellness-hub-main/backend/.env
@@ -1,1 +1,3 @@
 PORT=5000
+MONGO_URI=mongodb+srv://bnzuki4:gk5aZc0YpXZVZkL5@cluster0.iywcfvs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=supersecretkey
