--- a/naks-wellness-hub-main/backend/package.json
+++ b/naks-wellness-hub-main/backend/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
+    "nodemailer": "^6.10.1",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2"
   }
 }
